# crumbcatcher

./: README.md  crumbcatcher.py  pyproject.toml  requirements.txt  scrapy.cfg
crumbcatcher/: items.py  middlewares.py  pipelines.py  settings.py
crumbcatcher/spiders/: crumbl.py
