[tool.poetry]
name = "crumbcatcher"
version = "0.1.0"
description = "A web scraper for this week's Crumbl Cookie flavors."
authors = ["James Walters <33947683+iamjameswalters@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
rich = "^12.5.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
